--- a/userForm.html
+++ b/userForm.html
@@ -35,6 +35,8 @@
        <label>Imagem:</label> <br> 
        <input type="file" id="image" name="photo" value="C:\wamp64\www\COVID\avatar.png"> <br>
        <h3>Dados Pessoais</h3>
+       <label>Idade:</label>
+
        <label>Sexo:</label> <br>
        <input type = "radio" name = "sex" value = "male"> Masculino
        <input type = "radio" name = "sex" value = "female"> Feminino
@@ -44,6 +46,11 @@
        <input type="email" name="email" value="arturSoares@gmail.com"> <br>
        <label>NIF:</label> <br> 
        <input type="text" name="nif" value="12005000647"> <br>
+       <label>:</label> <br>
+       <input type = "radio" name = "sex" value = "male"> Masculino
+       <input type = "radio" name = "sex" value = "female"> Feminino
+       <input type = "radio" name = "sex" value = "other" checked=True> Outro
+       <br>
         <!-- upload patient image -->
         
 
