asset folder e 4 menus

--- a/userForm.html
+++ b/userForm.html
@@ -11,11 +11,11 @@
     <h2>Criar Conta</h2>
     <hr>
     <form>
-        <label>Tipo de Conta</label> <br>
-        <input type = "radio" name = "type" value = "patient" checked=true> Paciente
-        <input type = "radio" name = "type" value = "admin"> Administrador
-        <input type = "radio" name = "type" value = "investigator" > Analista de dados
-        <input type = "radio" name = "type" value = "medic" > Médico
+        <label>Tipo de Perfil:</label> <br>
+        <input type = "radio" name = "profile" value = "patient" checked=true> Paciente
+        <input type = "radio" name = "profile" value = "admin"> Administrador
+        <input type = "radio" name = "profile" value = "investigator" > Analista de dados
+        <input type = "radio" name = "profile" value = "medic" > Médico
         <br>
        <label>Nome:</label> <br>
        <input type = "text" name = "name" value = "Artur Soares Dia" > 
@@ -36,6 +36,7 @@
        <input type="file" id="image" name="photo" value="C:\wamp64\www\COVID\avatar.png"> <br>
        <h3>Dados Pessoais</h3>
        <label>Idade:</label>
+       <input type = "text" name = "age" value = "45" >  <br>
 
        <label>Sexo:</label> <br>
        <input type = "radio" name = "sex" value = "male"> Masculino
